--- a/FootballBookmakerSystem/P03_FootballBetting.Data/P03_FootballBetting.Data.csproj
+++ b/FootballBookmakerSystem/P03_FootballBetting.Data/P03_FootballBetting.Data.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="EntityConfiguration\" />
+    <ProjectReference Include="..\P03_FootballBetting.Data.Models\P03_FootballBetting.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
