--- a/FootballBookmakerSystem/P03_FootballBetting/P03_FootballBetting.csproj
+++ b/FootballBookmakerSystem/P03_FootballBetting/P03_FootballBetting.csproj
@@ -6,11 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <ProjectReference Include="..\P03_FootballBetting.Data\P03_FootballBetting.Data.csproj" />
   </ItemGroup>
 
 </Project>
